--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=10,IE=9,IE=8">
 
     <title>[TITLE]</title>
-    <meta name="description" content="[TITLE]">
+    <meta name="description" content="The Newbie Club's GFX Cards Archival Official Project">
     <meta name="author" content="{{author}}">
     <meta content="general" name="rating" />
     <meta content="us" name="geo.country" />
